--- a/app_data.json
+++ b/app_data.json
@@ -31,31 +31,31 @@
       {"name": "たし算とひき算の筆算(1)", "apps": [{"id": "2n-hissan-th1", "title": "たし算とひき算の筆算(1)", "path": "2nen/2nen_hissan_th1.html"}]},
       {"name": "100をこえる数", "apps": [{"id": "2n-100-koeru", "title": "100をこえる数", "path": "2nen/2nen_100_koeru.html"}]},
       {"name": "かさ", "apps": [{"id": "2n-kasa", "title": "かさ", "path": "2nen/2nen_kasa.html"}]},
-       {
-      "name": "かけ算",
-      "apps": [
-        {"id": "kuku-1dan-junban", "title": "一の段の九九（じゅんばん）", "path": "2nen/kuku_1dan_junban.html"},
-        {"id": "kuku-1dan-barabara", "title": "一の段の九九（ばらばら）", "path": "2nen/kuku_1dan_barabara.html"},
-        {"id": "kuku-2dan-junban", "title": "二の段の九九（じゅんばん）", "path": "2nen/kuku_2dan_junban.html"},
-        {"id": "kuku-2dan-barabara", "title": "二の段の九九（ばらばら）", "path": "2nen/kuku_2dan_barabara.html"},
-        {"id": "kuku-3dan-junban", "title": "三の段の九九（じゅんばん）", "path": "2nen/kuku_3dan_junban.html"},
-        {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/kuku_3dan_barabara.html"},
-        {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/kuku_4dan_junban.html"},
-        {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/kuku_4dan_barabara.html"},
-        {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/kuku_5dan_junban.html"},
-        {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/kuku_5dan_barabara.html"},
-        {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/kuku_6dan_junban.html"},
-        {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/kuku_6dan_barabara.html"},
-        {"id": "kuku-7dan-junban", "title": "七の段の九九（じゅんばん）", "path": "2nen/kuku_7dan_junban.html"},
-        {"id": "kuku-7dan-barabara", "title": "七の段の九九（ばらばら）", "path": "2nen/kuku_7dan_barabara.html"},
-        {"id": "kuku-8dan-junban", "title": "八の段の九九（じゅんばん）", "path": "2nen/kuku_8dan_junban.html"},
-        {"id": "kuku-8dan-barabara", "title": "八の段の九九（ばらばら）", "path": "2nen/kuku_8dan_barabara.html"},
-        {"id": "kuku-9dan-junban", "title": "九の段の九九（じゅんばん）", "path": "2nen/kuku_9dan_junban.html"},
-        {"id": "kuku-9dan-barabara", "title": "九の段の九九（ばらばら）", "path": "2nen/kuku_9dan_barabara.html"},
-        {"id": "kuku-10mondai", "title": "九九（10問）", "path": "2nen/kuku_10mondai.html"},
-        {"id": "kuku-81mondai", "title": "九九（81問）", "path": "2nen/kuku_81mondai.html"}
-      ]
-    },
+      {
+        "name": "かけ算",
+        "apps": [
+          {"id": "kuku-10mondai", "title": "九九（10問）", "path": "2nen/kuku_10mondai.html"},
+          {"id": "kuku-81mondai", "title": "九九（81問）", "path": "2nen/kuku_81mondai.html"},
+          {"id": "kuku-1dan-junban", "title": "一の段の九九（じゅんばん）", "path": "2nen/kuku_1dan_junban.html"},
+          {"id": "kuku-2dan-junban", "title": "二の段の九九（じゅんばん）", "path": "2nen/kuku_2dan_junban.html"},
+          {"id": "kuku-3dan-junban", "title": "三の段の九九（じゅんばん）", "path": "2nen/kuku_3dan_junban.html"},
+          {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/kuku_4dan_junban.html"},
+          {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/kuku_5dan_junban.html"},
+          {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/kuku_6dan_junban.html"},
+          {"id": "kuku-7dan-junban", "title": "七の段の九九（じゅんばん）", "path": "2nen/kuku_7dan_junban.html"},
+          {"id": "kuku-8dan-junban", "title": "八の段の九九（じゅんばん）", "path": "2nen/kuku_8dan_junban.html"},
+          {"id": "kuku-9dan-junban", "title": "九の段の九九（じゅんばん）", "path": "2nen/kuku_9dan_junban.html"},
+          {"id": "kuku-1dan-barabara", "title": "一の段の九九（ばらばら）", "path": "2nen/kuku_1dan_barabara.html"},
+          {"id": "kuku-2dan-barabara", "title": "二の段の九九（ばらばら）", "path": "2nen/kuku_2dan_barabara.html"},
+          {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/kuku_3dan_barabara.html"},
+          {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/kuku_4dan_barabara.html"},
+          {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/kuku_5dan_barabara.html"},
+          {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/kuku_6dan_barabara.html"},
+          {"id": "kuku-7dan-barabara", "title": "七の段の九九（ばらばら）", "path": "2nen/kuku_7dan_barabara.html"},
+          {"id": "kuku-8dan-barabara", "title": "八の段の九九（ばらばら）", "path": "2nen/kuku_8dan_barabara.html"},
+          {"id": "kuku-9dan-barabara", "title": "九の段の九九（ばらばら）", "path": "2nen/kuku_9dan_barabara.html"}
+        ]
+      },
       {"name": "三角形と四角形", "apps": [{"id": "2n-sankakkei-shikakkei", "title": "三角形と四角形", "path": "2nen/2nen_sankakkei_shikakkei.html"}]},
       {"name": "1000をこえる数", "apps": [{"id": "2n-1000-koeru", "title": "1000をこえる数", "path": "2nen/2nen_1000_koeru.html"}]},
       {"name": "はこい形", "apps": [{"id": "2n-hako-katachi", "title": "はこい形", "path": "2nen/2nen_hako_katachi.html"}]},
