--- a/app_data.json
+++ b/app_data.json
@@ -34,26 +34,26 @@
       {
         "name": "かけ算",
         "apps": [
+          {"id": "kuku-1dan-junban", "title": "一の段の九九（じゅんばん）", "path": "2nen/01kuku_1dan_junban.html"},
+          {"id": "kuku-2dan-junban", "title": "二の段の九九（じゅんばん）", "path": "2nen/02kuku_2dan_junban.html"},
+          {"id": "kuku-3dan-junban", "title": "三の段の九九（じゅんばん）", "path": "2nen/03kuku_3dan_junban.html"},
+          {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/04kuku_4dan_junban.html"},
+          {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/05kuku_5dan_junban.html"},
+          {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/06kuku_6dan_junban.html"},
+          {"id": "kuku-7dan-junban", "title": "七の段の九九（じゅんばん）", "path": "2nen/07kuku_7dan_junban.html"},
+          {"id": "kuku-8dan-junban", "title": "八の段の九九（じゅんばん）", "path": "2nen/08uku_8dan_junban.html"},
+          {"id": "kuku-9dan-junban", "title": "九の段の九九（じゅんばん）", "path": "2nen/09kuku_9dan_junban.html"},
+          {"id": "kuku-1dan-barabara", "title": "一の段の九九（ばらばら）", "path": "2nen/11kuku_1dan_barabara.html"},
+          {"id": "kuku-2dan-barabara", "title": "二の段の九九（ばらばら）", "path": "2nen/12kuku_2dan_barabara.html"},
+          {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/13kuku_3dan_barabara.html"},
+          {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/14kuku_4dan_barabara.html"},
+          {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/15kuku_5dan_barabara.html"},
+          {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/16kuku_6dan_barabara.html"},
+          {"id": "kuku-7dan-barabara", "title": "七の段の九九（ばらばら）", "path": "2nen/17kuku_7dan_barabara.html"},
+          {"id": "kuku-8dan-barabara", "title": "八の段の九九（ばらばら）", "path": "2nen/18kuku_8dan_barabara.html"},
+          {"id": "kuku-9dan-barabara", "title": "九の段の九九（ばらばら）", "path": "2nen/19kuku_9dan_barabara.html"},
           {"id": "kuku-10mondai", "title": "九九（10問）", "path": "2nen/kuku_10mondai.html"},
-          {"id": "kuku-81mondai", "title": "九九（81問）", "path": "2nen/kuku_81mondai.html"},
-          {"id": "kuku-1dan-junban", "title": "一の段の九九（じゅんばん）", "path": "2nen/kuku_1dan_junban.html"},
-          {"id": "kuku-2dan-junban", "title": "二の段の九九（じゅんばん）", "path": "2nen/kuku_2dan_junban.html"},
-          {"id": "kuku-3dan-junban", "title": "三の段の九九（じゅんばん）", "path": "2nen/kuku_3dan_junban.html"},
-          {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/kuku_4dan_junban.html"},
-          {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/kuku_5dan_junban.html"},
-          {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/kuku_6dan_junban.html"},
-          {"id": "kuku-7dan-junban", "title": "七の段の九九（じゅんばん）", "path": "2nen/kuku_7dan_junban.html"},
-          {"id": "kuku-8dan-junban", "title": "八の段の九九（じゅんばん）", "path": "2nen/kuku_8dan_junban.html"},
-          {"id": "kuku-9dan-junban", "title": "九の段の九九（じゅんばん）", "path": "2nen/kuku_9dan_junban.html"},
-          {"id": "kuku-1dan-barabara", "title": "一の段の九九（ばらばら）", "path": "2nen/kuku_1dan_barabara.html"},
-          {"id": "kuku-2dan-barabara", "title": "二の段の九九（ばらばら）", "path": "2nen/kuku_2dan_barabara.html"},
-          {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/kuku_3dan_barabara.html"},
-          {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/kuku_4dan_barabara.html"},
-          {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/kuku_5dan_barabara.html"},
-          {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/kuku_6dan_barabara.html"},
-          {"id": "kuku-7dan-barabara", "title": "七の段の九九（ばらばら）", "path": "2nen/kuku_7dan_barabara.html"},
-          {"id": "kuku-8dan-barabara", "title": "八の段の九九（ばらばら）", "path": "2nen/kuku_8dan_barabara.html"},
-          {"id": "kuku-9dan-barabara", "title": "九の段の九九（ばらばら）", "path": "2nen/kuku_9dan_barabara.html"}
+          {"id": "kuku-81mondai", "title": "九九（81問）", "path": "2nen/kuku_81mondai.html"}
         ]
       },
       {"name": "図をつかって考えよう", "apps": [{"id": "2n-zu-kangaeru", "title": "図をつかって考えよう", "path": "2nen/2nen_zu_kangaeru.html"}]},
