--- a/app_data.json
+++ b/app_data.json
@@ -24,41 +24,48 @@
   {
     "grade": "小学2年",
     "units": [
-      {"name": "1 ひょうと グラフ", "apps": [{"id": "2n-hyo-graph", "title": "1 ひょうと グラフ", "path": "2nen/2nen_hyo_graph.html"}]},
-      {"name": "2 たし算とひき算", "apps": [{"id": "2n-tashizan-hikizan", "title": "2 たし算とひき算", "path": "2nen/2nen_tashizan_hikizan.html"}]},
-      {"name": "3 時こくと時間", "apps": [{"id": "2n-jikoku-jikan", "title": "3 時こくと時間", "path": "2nen/2nen_jikoku_jikan.html"}]},
-      {"name": "4 長さ", "apps": [{"id": "2n-nagasa", "title": "4 長さ", "path": "2nen/2nen_nagasa.html"}]},
-      {"name": "5 たし算とひき算の筆算(1)", "apps": [{"id": "2n-hissan-th1", "title": "5 たし算とひき算の筆算(1)", "path": "2nen/2nen_hissan_th1.html"}]},
-      {"name": "6 100をこえる数", "apps": [{"id": "2n-100-koeru", "title": "6 100をこえる数", "path": "2nen/2nen_100_koeru.html"}]},
-      {"name": "7 かさ", "apps": [{"id": "2n-kasa", "title": "7 かさ", "path": "2nen/2nen_kasa.html"}]},
-      {"name": "8 たし算とひき算の筆算(2)", "apps": [{"id": "2n-hissan-th2", "title": "8 たし算とひき算の筆算(2)", "path": "2nen/2nen_hissan_th2.html"}]},
-      {"name": "9 しきと　計算", "apps": [{"id": "2n-sikito-keisan", "title": "9 しきと計算", "path": "2nen/2nen_sankaku_shikaku.html"}]},            
+      {"name": "1　ひょうと グラフ", "apps": [{"id": "2n-hyo-graph", "title": "1　ひょうと グラフ", "path": "2nen/2nen_hyo_graph.html"}]},
+      {"name": "2　たし算とひき算", "apps": [{"id": "2n-tashizan-hikizan", "title": "2　たし算とひき算", "path": "2nen/2nen_tashizan_hikizan.html"}]},
+      {"name": "3　時こくと時間", "apps": [{"id": "2n-jikoku-jikan", "title": "3　時こくと時間", "path": "2nen/2nen_jikoku_jikan.html"}]},
+      {"name": "4　長さ", "apps": [{"id": "2n-nagasa", "title": "4　長さ", "path": "2nen/2nen_nagasa.html"}]},
+      {"name": "5　たし算とひき算の筆算(1)", "apps": [{"id": "2n-hissan-th1", "title": "5　たし算とひき算の筆算(1)", "path": "2nen/2nen_hissan_th1.html"}]},
+      {"name": "6　100をこえる数", "apps": [{"id": "2n-100-koeru", "title": "6　100をこえる数", "path": "2nen/2nen_100_koeru.html"}]},
+      {"name": "7　かさ", "apps": [{"id": "2n-kasa", "title": "7　かさ", "path": "2nen/2nen_kasa.html"}]},
+      {"name": "8　たし算とひき算の筆算(2)", "apps": [{"id": "2n-hissan-th2", "title": "8　たし算とひき算の筆算(2)", "path": "2nen/2nen_hissan_th2.html"}]},
+      {"name": "9　しきと計算", "apps": [{"id": "2n-sikito-keisan", "title": "9　しきと計算", "path": "2nen/2nen_sankaku_shikaku.html"}]},            
       {
-        "name": "10-11　かけ算",
+        "name": "10　かけ算(1)",
         "apps": [
-          {"id": "kuku-1dan-junban", "title": "一の段の九九（じゅんばん）", "path": "2nen/01kuku_1dan_junban.html"},
-          {"id": "kuku-2dan-junban", "title": "二の段の九九（じゅんばん）", "path": "2nen/02kuku_2dan_junban.html"},
-          {"id": "kuku-3dan-junban", "title": "三の段の九九（じゅんばん）", "path": "2nen/03kuku_3dan_junban.html"},
-          {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/04kuku_4dan_junban.html"},
-          {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/05kuku_5dan_junban.html"},
-          {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/06kuku_6dan_junban.html"},
-          {"id": "kuku-7dan-junban", "title": "七の段の九九（じゅんばん）", "path": "2nen/07kuku_7dan_junban.html"},
-          {"id": "kuku-8dan-junban", "title": "八の段の九九（じゅんばん）", "path": "2nen/08uku_8dan_junban.html"},
-          {"id": "kuku-9dan-junban", "title": "九の段の九九（じゅんばん）", "path": "2nen/09kuku_9dan_junban.html"},
-          {"id": "kuku-1dan-barabara", "title": "一の段の九九（ばらばら）", "path": "2nen/11kuku_1dan_barabara.html"},
-          {"id": "kuku-2dan-barabara", "title": "二の段の九九（ばらばら）", "path": "2nen/12kuku_2dan_barabara.html"},
-          {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/13kuku_3dan_barabara.html"},
-          {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/14kuku_4dan_barabara.html"},
-          {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/15kuku_5dan_barabara.html"},
-          {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/16kuku_6dan_barabara.html"},
-          {"id": "kuku-7dan-barabara", "title": "七の段の九九（ばらばら）", "path": "2nen/17kuku_7dan_barabara.html"},
-          {"id": "kuku-8dan-barabara", "title": "八の段の九九（ばらばら）", "path": "2nen/18kuku_8dan_barabara.html"},
-          {"id": "kuku-9dan-barabara", "title": "九の段の九九（ばらばら）", "path": "2nen/19kuku_9dan_barabara.html"},
-          {"id": "kuku-10mondai", "title": "九九（10問）", "path": "2nen/20kuku_10mondai.html"},
-          {"id": "kuku-81mondai", "title": "九九（81問）", "path": "2nen/21kuku_81mondai.html"}
+          {"id": "kuku-5dan-junban", "title": "五の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/05kuku_5dan_junban.html"},
+          {"id": "kuku-5dan-barabara", "title": "五の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/15kuku_5dan_barabara.html"},
+          {"id": "kuku-2dan-junban", "title": "二の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/02kuku_2dan_junban.html"},
+          {"id": "kuku-2dan-barabara", "title": "二の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/12kuku_2dan_barabara.html"},
+          {"id": "kuku-3dan-junban", "title": "三の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/03kuku_3dan_junban.html"},
+          {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/13kuku_3dan_barabara.html"},
+          {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/04kuku_4dan_junban.html"},
+          {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/14kuku_4dan_barabara.html"},
+          {"id": "kuku-2345dan-random_", "title": "かけ算(1)　れんしゅう", "path": "2nen/10-11_kakezan/22kuku_2345dan_random.html"}
         ]
       },
-      {"name": "図をつかって考えよう", "apps": [{"id": "2n-zu-kangaeru", "title": "図をつかって考えよう", "path": "2nen/2nen_zu_kangaeru.html"}]},
+      {
+        "name": "10　かけ算(2)",
+        "apps": [
+          {"id": "kuku-6dan-junban", "title": "六の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/06kuku_6dan_junban.html"},
+          {"id": "kuku-6dan-barabara", "title": "六の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/16kuku_6dan_barabara.html"},
+          {"id": "kuku-7dan-junban", "title": "七の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/07kuku_7dan_junban.html"},
+          {"id": "kuku-7dan-barabara", "title": "七の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/17kuku_7dan_barabara.html"},
+          {"id": "kuku-8dan-junban", "title": "八の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/08uku_8dan_junban.html"},
+          {"id": "kuku-8dan-barabara", "title": "八の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/18kuku_8dan_barabara.html"},
+          {"id": "kuku-9dan-junban", "title": "九の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/09kuku_9dan_junban.html"},
+          {"id": "kuku-9dan-barabara", "title": "九の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/19kuku_9dan_barabara.html"},
+          {"id": "kuku-1dan-junban", "title": "一の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/01kuku_1dan_junban.html"},
+          {"id": "kuku-1dan-barabara", "title": "一の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/11kuku_1dan_barabara.html"},
+          {"id": "kuku-16789dan-random_", "title": "一、六、七、八、九段の九九", "path": "2nen/10-11_kakezan/23kuku_16789dan_random"},
+          {"id": "kuku-10mondai", "title": "九九", "path": "2nen/10-11_kakezan/20kuku_10mondai.html"},
+          {"id": "kuku-81mondai", "title": "九九（81問）", "path": "2nen/10-11_kakezan/21kuku_81mondai.html"}
+        ]
+      },
+
       {"name": "分数", "apps": [{"id": "2n-bunsuu", "title": "分数", "path": "2nen/2nen_bunsuu.html"}]},
 
       {"name": "三角形と四角形", "apps": [{"id": "2n-sankaku-shikaku", "title": "三角形と四角形", "path": "2nen/2nen_sankaku_shikaku.html"}]},
