--- a/app_data.json
+++ b/app_data.json
@@ -44,7 +44,7 @@
           {"id": "kuku-3dan-barabara", "title": "三の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/13kuku_3dan_barabara.html"},
           {"id": "kuku-4dan-junban", "title": "四の段の九九（じゅんばん）", "path": "2nen/10-11_kakezan/04kuku_4dan_junban.html"},
           {"id": "kuku-4dan-barabara", "title": "四の段の九九（ばらばら）", "path": "2nen/10-11_kakezan/14kuku_4dan_barabara.html"},
-          {"id": "kuku-2345dan-random_", "title": "かけ算(1)　れんしゅう", "path": "2nen/10-11_kakezan/22kuku_2345dan_random.html"}
+          {"id": "kuku-2345dan-random_", "title": "二、三、四、五の段の九九", "path": "2nen/10-11_kakezan/22kuku_2345dan_random.html"}
         ]
       },
       {
